// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildCloud golden values (pre-refactor characterisation) > matches the frozen snapshot: gridded 1`] = `
{
  "bounds": [
    -39.925,
    40,
    -39.9625,
    39.90909273202703,
  ],
  "climits": [
    -39.83509063720703,
    59.72993850708008,
  ],
  "col": [
    0.387690007686615,
    0.7904374003410339,
    0.37039437890052795,
    0.1497878134250641,
    0.5079032182693481,
    0.5552344918251038,
    0.12818430364131927,
    0.5653112530708313,
    0.5506857633590698,
    0.13172976672649384,
    0.6205115914344788,
    0.5313320755958557,
    0.23791129887104034,
    0.30142661929130554,
    0.5378401279449463,
    0.973332941532135,
    0.9035707116127014,
    0.14438077807426453,
    0.835390567779541,
    0.8856567144393921,
    0.14746156334877014,
    0.5854666829109192,
    0.8427207469940186,
    0.24920187890529633,
    0.18887022137641907,
    0.4129672944545746,
    0.5552032589912415,
    0.2687886953353882,
    0.020419828593730927,
    0.34405243396759033,
    0.2923194169998169,
    0.7575124502182007,
    0.4258232116699219,
    0.26293525099754333,
    0.22624872624874115,
    0.5072483420372009,
    0.14242281019687653,
    0.527474582195282,
    0.5536837577819824,
    0.1320580542087555,
    0.6247366666793823,
    0.529815673828125,
    0.2051299810409546,
    0.37550440430641174,
    0.5533066391944885,
    0.16072478890419006,
    0.47883984446525574,
    0.557537317276001,
    0.201328843832016,
    0.3842622935771942,
    0.5537500381469727,
    0.22474229335784912,
    0.3311549127101898,
    0.5442975163459778,
    0.2786266803741455,
    0.10611540824174881,
    0.4247405230998993,
    0.27158933877944946,
    0.18874366581439972,
    0.4853880703449249,
    0.20290164649486542,
    0.3806385099887848,
    0.553566575050354,
    0.21852944791316986,
    0.34518009424209595,
    0.5473439693450928,
    0.1747342348098755,
    0.4455370306968689,
    0.5568521618843079,
    0.19438189268112183,
    0.4002682566642761,
    0.5545603632926941,
    0.14502361416816711,
    0.5205633640289307,
    0.5542314052581787,
    0.16417886316776276,
    0.4698568880558014,
    0.5580834150314331,
    0.8834408521652222,
    0.8918967843055725,
    0.14638841152191162,
    0.2795250713825226,
    0.15435177087783813,
    0.46534237265586853,
    0.27540817856788635,
    0.07807997614145279,
    0.3983432948589325,
    0.7491680979728699,
    0.8744593858718872,
    0.14938724040985107,
    0.9905498623847961,
    0.9058066010475159,
    0.1439962536096573,
    0.14787080883979797,
    0.667616069316864,
    0.5099682807922363,
    0.13282866775989532,
    0.634654700756073,
    0.5262560248374939,
    0.9315069913864136,
    0.8981389403343201,
    0.14531491696834564,
    0.20694446563720703,
    0.7078691124916077,
    0.47553956508636475,
    0.24658897519111633,
    0.7348830699920654,
    0.45243436098098755,
    0.2630249261856079,
    0.746082603931427,
    0.4428553283214569,
    0.2546854317188263,
    0.7404000163078308,
    0.4477156698703766,
    0.22236554324626923,
    0.7183771133422852,
    0.4665520191192627,
    0.1691463738679886,
    0.6821133494377136,
    0.49756866693496704,
  ],
  "count": 40,
  "pos": [
    -23.273958206176758,
    -36.634517669677734,
    -16.613542556762695,
    -36.634517669677734,
    -9.953125,
    -36.634517669677734,
    -3.292708396911621,
    -36.634517669677734,
    3.367708444595337,
    -36.634517669677734,
    10.028124809265137,
    -36.634517669677734,
    16.688541412353516,
    -36.634517669677734,
    23.34895896911621,
    -36.634517669677734,
    -29.934375762939453,
    -29.97854995727539,
    -23.273958206176758,
    -29.97854995727539,
    30.009374618530273,
    -29.97854995727539,
    -36.594791412353516,
    -23.32258415222168,
    -29.934375762939453,
    -23.32258415222168,
    30.009374618530273,
    -23.32258415222168,
    -36.594791412353516,
    -16.66661834716797,
    36.66979217529297,
    -16.66661834716797,
    -36.594791412353516,
    -10.010652542114258,
    36.66979217529297,
    -10.010652542114258,
    -36.594791412353516,
    -3.354686737060547,
    36.66979217529297,
    -3.354686737060547,
    -36.594791412353516,
    3.301279306411743,
    36.66979217529297,
    3.301279306411743,
    -36.594791412353516,
    9.957245826721191,
    36.66979217529297,
    9.957245826721191,
    -36.594791412353516,
    16.613210678100586,
    36.66979217529297,
    16.613210678100586,
    -36.594791412353516,
    23.26917839050293,
    -29.934375762939453,
    23.26917839050293,
    30.009374618530273,
    23.26917839050293,
    36.66979217529297,
    23.26917839050293,
    -29.934375762939453,
    29.92514419555664,
    -23.273958206176758,
    29.92514419555664,
    23.34895896911621,
    29.92514419555664,
    30.009374618530273,
    29.92514419555664,
    -16.613542556762695,
    36.58110809326172,
    -9.953125,
    36.58110809326172,
    -3.292708396911621,
    36.58110809326172,
    3.367708444595337,
    36.58110809326172,
    10.028124809265137,
    36.58110809326172,
    16.688541412353516,
    36.58110809326172,
  ],
  "zv": null,
}
`;

exports[`buildCloud golden values (pre-refactor characterisation) > matches the frozen snapshot: inner-diam-20 1`] = `
{
  "bounds": [
    -39.925,
    40,
    -39.9625,
    39.90909273202703,
  ],
  "climits": [
    -39.83509063720703,
    59.72993850708008,
  ],
  "col": [
    0.1276056170463562,
    0.5674331784248352,
    0.5503822565078735,
    0.20574109256267548,
    0.7070491313934326,
    0.4762409031391144,
    0.4613218605518341,
    0.8158574104309082,
    0.32759997248649597,
    0.7491680979728699,
    0.8744593858718872,
    0.14938724040985107,
    0.9315069913864136,
    0.8981389403343201,
    0.14531491696834564,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9475539326667786,
    0.900222897529602,
    0.1449565291404724,
    0.7797320485115051,
    0.87842857837677,
    0.1487046331167221,
    0.5014044642448425,
    0.8261541724205017,
    0.30292150378227234,
    0.23186469078063965,
    0.7248498797416687,
    0.46101582050323486,
    0.12909318506717682,
    0.5865784883499146,
    0.5435108542442322,
    0.17770697176456451,
    0.4386877715587616,
    0.5565054416656494,
    0.24167394638061523,
    0.2929326593875885,
    0.5359951257705688,
    0.2795250713825226,
    0.15435177087783813,
    0.46534237265586853,
    0.27212125062942505,
    0.04944873973727226,
    0.3713850677013397,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26913756132125854,
    0.02345864474773407,
    0.3469136655330658,
    0.2786266803741455,
    0.10611540824174881,
    0.4247405230998993,
    0.2608802914619446,
    0.23515444993972778,
    0.5124391317367554,
    0.2032516747713089,
    0.37983208894729614,
    0.5535257458686829,
    0.14242281019687653,
    0.527474582195282,
    0.5536837577819824,
    0.15248841047286987,
    0.6707625389099121,
    0.5072770714759827,
    0.387690007686615,
    0.7904374003410339,
    0.37039437890052795,
    0.6800394654273987,
    0.8613587021827698,
    0.1887655407190323,
    0.8932371735572815,
    0.8931689858436584,
    0.14616963267326355,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.973332941532135,
    0.9035707116127014,
    0.14438077807426453,
    0.835390567779541,
    0.8856567144393921,
    0.14746156334877014,
    0.5854666829109192,
    0.8427207469940186,
    0.24920187890529633,
    0.2923194169998169,
    0.7575124502182007,
    0.4258232116699219,
    0.1320580542087555,
    0.6247366666793823,
    0.529815673828125,
    0.16072478890419006,
    0.47883984446525574,
    0.557537317276001,
    0.22474229335784912,
    0.3311549127101898,
    0.5442975163459778,
    0.27158933877944946,
    0.18874366581439972,
    0.4853880703449249,
    0.2747451364994049,
    0.07230441272258759,
    0.39290520548820496,
    0.2675749361515045,
    0.009847280569374561,
    0.334097683429718,
    0.26780322194099426,
    0.011835644021630287,
    0.33596986532211304,
    0.27540817856788635,
    0.07807997614145279,
    0.3983432948589325,
    0.26968902349472046,
    0.19697920978069305,
    0.49018827080726624,
    0.2207927107810974,
    0.3400708734989166,
    0.5462341904640198,
    0.15736398100852966,
    0.4877707064151764,
    0.5568296909332275,
    0.13272640109062195,
    0.6333383917808533,
    0.5267284512519836,
    0.3103184103965759,
    0.7637262344360352,
    0.41536229848861694,
    0.6036733984947205,
    0.8463088870048523,
    0.23756694793701172,
    0.8469591736793518,
    0.8871591091156006,
    0.14720319211483002,
    0.9779901504516602,
    0.9041755199432373,
    0.14427676796913147,
    0.9905498623847961,
    0.9058066010475159,
    0.1439962536096573,
    0.8834408521652222,
    0.8918967843055725,
    0.14638841152191162,
    0.6633169054985046,
    0.8580631017684937,
    0.1994520127773285,
    0.37046507000923157,
    0.7844907641410828,
    0.38040539622306824,
    0.1402633786201477,
    0.6624323725700378,
    0.5144019722938538,
    0.14582161605358124,
    0.5184428095817566,
    0.5543993711471558,
    0.2070319652557373,
    0.37113502621650696,
    0.5529816746711731,
    0.26293525099754333,
    0.22624872624874115,
    0.5072483420372009,
    0.27785611152648926,
    0.09940323978662491,
    0.41842055320739746,
    0.2687886953353882,
    0.020419828593730927,
    0.34405243396759033,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.27267220616340637,
    0.05424775928258896,
    0.3759036660194397,
    0.2777925431728363,
    0.16186018288135529,
    0.46971872448921204,
    0.23791129887104034,
    0.30142661929130554,
    0.5378401279449463,
  ],
  "count": 60,
  "pos": [
    40,
    0,
    39.290016174316406,
    7.49497127532959,
    37.188270568847656,
    14.723876953125,
    33.769317626953125,
    21.430662155151367,
    29.15437126159668,
    27.377777099609375,
    23.506999969482422,
    32.3546142578125,
    17.0273380279541,
    36.184940338134766,
    9.944985389709473,
    38.733154296875,
    2.510868549346924,
    39.90909194946289,
    -5.0116400718688965,
    39.67119598388672,
    -12.356047630310059,
    38.027992248535156,
    -19.2622013092041,
    35.03780746459961,
    -25.485488891601562,
    30.806657791137695,
    -30.80550193786621,
    25.484533309936523,
    -35.03386306762695,
    19.260032653808594,
    -38.0208625793457,
    12.353730201721191,
    -39.6607780456543,
    5.010324001312256,
    -39.8956184387207,
    -2.510017156600952,
    -38.7171745300293,
    -9.940886497497559,
    -36.167293548583984,
    -17.01903533935547,
    -32.33640670776367,
    -23.49378204345703,
    -27.360321044921875,
    -29.13578224182129,
    -21.41538429260254,
    -33.74525833129883,
    -14.712282180786133,
    -37.15898132324219,
    -7.488499641418457,
    -39.25613021850586,
    -7.340992302430106e-15,
    -39.962501525878906,
    7.4879374504089355,
    -39.25318145751953,
    14.710073471069336,
    -37.153404235839844,
    21.410560607910156,
    -33.7376594543457,
    27.352108001708984,
    -29.127033233642578,
    32.32427215576172,
    -23.48496437072754,
    36.15100860595703,
    -17.011371612548828,
    38.696834564208984,
    -9.935663223266602,
    39.871665954589844,
    -2.5085103511810303,
    39.63399124145508,
    5.006932735443115,
    37.992332458496094,
    12.34444522857666,
    35.004940032958984,
    19.244142532348633,
    30.77776336669922,
    25.461585998535156,
    25.460628509521484,
    30.776607513427734,
    19.241973876953125,
    35.000999450683594,
    12.342127799987793,
    37.98520278930664,
    5.005616664886475,
    39.623573303222656,
    -2.507662534713745,
    39.858192443847656,
    -9.93154525756836,
    38.68085479736328,
    -17.003082275390625,
    36.133358001708984,
    -23.471738815307617,
    32.306068420410156,
    -29.10844612121582,
    27.334651947021484,
    -33.71358871459961,
    21.39530372619629,
    -37.124122619628906,
    14.698463439941406,
    -39.21929168701172,
    7.481472969055176,
    -39.92499923706055,
    1.4668206766940174e-14,
    -39.216346740722656,
    -7.480910778045654,
    -37.1185417175293,
    -14.69625473022461,
    -33.705989837646484,
    -21.390480041503906,
    -29.09969711303711,
    -27.32643699645996,
    -23.462923049926758,
    -32.2939338684082,
    -16.995418548583984,
    -36.117069244384766,
    -9.926322937011719,
    -38.66051483154297,
    -2.5061557292938232,
    -39.8342399597168,
    5.002232551574707,
    -39.59678649902344,
  ],
  "zv": null,
}
`;

exports[`buildCloud golden values (pre-refactor characterisation) > matches the frozen snapshot: manual-climits 1`] = `
{
  "bounds": [
    -39.925,
    40,
    -39.9625,
    39.90909273202703,
  ],
  "climits": [
    -10,
    10,
  ],
  "col": [
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.19079338014125824,
    0.40853631496429443,
    0.5549789667129517,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.2735902965068817,
    0.06224505230784416,
    0.38343366980552673,
    0.4612411558628082,
    0.8158295750617981,
    0.3276468515396118,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.1303882598876953,
    0.6032460927963257,
    0.5375287532806396,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.1336938887834549,
    0.6457902193069458,
    0.5222594141960144,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.3624325692653656,
    0.7817177176475525,
    0.38507384061813354,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
  ],
  "count": 60,
  "pos": [
    40,
    0,
    39.290016174316406,
    7.49497127532959,
    37.188270568847656,
    14.723876953125,
    33.769317626953125,
    21.430662155151367,
    29.15437126159668,
    27.377777099609375,
    23.506999969482422,
    32.3546142578125,
    17.0273380279541,
    36.184940338134766,
    9.944985389709473,
    38.733154296875,
    2.510868549346924,
    39.90909194946289,
    -5.0116400718688965,
    39.67119598388672,
    -12.356047630310059,
    38.027992248535156,
    -19.2622013092041,
    35.03780746459961,
    -25.485488891601562,
    30.806657791137695,
    -30.80550193786621,
    25.484533309936523,
    -35.03386306762695,
    19.260032653808594,
    -38.0208625793457,
    12.353730201721191,
    -39.6607780456543,
    5.010324001312256,
    -39.8956184387207,
    -2.510017156600952,
    -38.7171745300293,
    -9.940886497497559,
    -36.167293548583984,
    -17.01903533935547,
    -32.33640670776367,
    -23.49378204345703,
    -27.360321044921875,
    -29.13578224182129,
    -21.41538429260254,
    -33.74525833129883,
    -14.712282180786133,
    -37.15898132324219,
    -7.488499641418457,
    -39.25613021850586,
    -7.340992302430106e-15,
    -39.962501525878906,
    7.4879374504089355,
    -39.25318145751953,
    14.710073471069336,
    -37.153404235839844,
    21.410560607910156,
    -33.7376594543457,
    27.352108001708984,
    -29.127033233642578,
    32.32427215576172,
    -23.48496437072754,
    36.15100860595703,
    -17.011371612548828,
    38.696834564208984,
    -9.935663223266602,
    39.871665954589844,
    -2.5085103511810303,
    39.63399124145508,
    5.006932735443115,
    37.992332458496094,
    12.34444522857666,
    35.004940032958984,
    19.244142532348633,
    30.77776336669922,
    25.461585998535156,
    25.460628509521484,
    30.776607513427734,
    19.241973876953125,
    35.000999450683594,
    12.342127799987793,
    37.98520278930664,
    5.005616664886475,
    39.623573303222656,
    -2.507662534713745,
    39.858192443847656,
    -9.93154525756836,
    38.68085479736328,
    -17.003082275390625,
    36.133358001708984,
    -23.471738815307617,
    32.306068420410156,
    -29.10844612121582,
    27.334651947021484,
    -33.71358871459961,
    21.39530372619629,
    -37.124122619628906,
    14.698463439941406,
    -39.21929168701172,
    7.481472969055176,
    -39.92499923706055,
    1.4668206766940174e-14,
    -39.216346740722656,
    -7.480910778045654,
    -37.1185417175293,
    -14.69625473022461,
    -33.705989837646484,
    -21.390480041503906,
    -29.09969711303711,
    -27.32643699645996,
    -23.462923049926758,
    -32.2939338684082,
    -16.995418548583984,
    -36.117069244384766,
    -9.926322937011719,
    -38.66051483154297,
    -2.5061557292938232,
    -39.8342399597168,
    5.002232551574707,
    -39.59678649902344,
  ],
  "zv": null,
}
`;

exports[`buildCloud golden values (pre-refactor characterisation) > matches the frozen snapshot: measured-raw 1`] = `
{
  "bounds": [
    -39.925,
    40,
    -39.9625,
    39.90909273202703,
  ],
  "climits": [
    -39.83509063720703,
    59.72993850708008,
  ],
  "col": [
    0.1276056170463562,
    0.5674331784248352,
    0.5503822565078735,
    0.20574109256267548,
    0.7070491313934326,
    0.4762409031391144,
    0.4613218605518341,
    0.8158574104309082,
    0.32759997248649597,
    0.7491680979728699,
    0.8744593858718872,
    0.14938724040985107,
    0.9315069913864136,
    0.8981389403343201,
    0.14531491696834564,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9475539326667786,
    0.900222897529602,
    0.1449565291404724,
    0.7797320485115051,
    0.87842857837677,
    0.1487046331167221,
    0.5014044642448425,
    0.8261541724205017,
    0.30292150378227234,
    0.23186469078063965,
    0.7248498797416687,
    0.46101582050323486,
    0.12909318506717682,
    0.5865784883499146,
    0.5435108542442322,
    0.17770697176456451,
    0.4386877715587616,
    0.5565054416656494,
    0.24167394638061523,
    0.2929326593875885,
    0.5359951257705688,
    0.2795250713825226,
    0.15435177087783813,
    0.46534237265586853,
    0.27212125062942505,
    0.04944873973727226,
    0.3713850677013397,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26913756132125854,
    0.02345864474773407,
    0.3469136655330658,
    0.2786266803741455,
    0.10611540824174881,
    0.4247405230998993,
    0.2608802914619446,
    0.23515444993972778,
    0.5124391317367554,
    0.2032516747713089,
    0.37983208894729614,
    0.5535257458686829,
    0.14242281019687653,
    0.527474582195282,
    0.5536837577819824,
    0.15248841047286987,
    0.6707625389099121,
    0.5072770714759827,
    0.387690007686615,
    0.7904374003410339,
    0.37039437890052795,
    0.6800394654273987,
    0.8613587021827698,
    0.1887655407190323,
    0.8932371735572815,
    0.8931689858436584,
    0.14616963267326355,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.973332941532135,
    0.9035707116127014,
    0.14438077807426453,
    0.835390567779541,
    0.8856567144393921,
    0.14746156334877014,
    0.5854666829109192,
    0.8427207469940186,
    0.24920187890529633,
    0.2923194169998169,
    0.7575124502182007,
    0.4258232116699219,
    0.1320580542087555,
    0.6247366666793823,
    0.529815673828125,
    0.16072478890419006,
    0.47883984446525574,
    0.557537317276001,
    0.22474229335784912,
    0.3311549127101898,
    0.5442975163459778,
    0.27158933877944946,
    0.18874366581439972,
    0.4853880703449249,
    0.2747451364994049,
    0.07230441272258759,
    0.39290520548820496,
    0.2675749361515045,
    0.009847280569374561,
    0.334097683429718,
    0.26780322194099426,
    0.011835644021630287,
    0.33596986532211304,
    0.27540817856788635,
    0.07807997614145279,
    0.3983432948589325,
    0.26968902349472046,
    0.19697920978069305,
    0.49018827080726624,
    0.2207927107810974,
    0.3400708734989166,
    0.5462341904640198,
    0.15736398100852966,
    0.4877707064151764,
    0.5568296909332275,
    0.13272640109062195,
    0.6333383917808533,
    0.5267284512519836,
    0.3103184103965759,
    0.7637262344360352,
    0.41536229848861694,
    0.6036733984947205,
    0.8463088870048523,
    0.23756694793701172,
    0.8469591736793518,
    0.8871591091156006,
    0.14720319211483002,
    0.9779901504516602,
    0.9041755199432373,
    0.14427676796913147,
    0.9905498623847961,
    0.9058066010475159,
    0.1439962536096573,
    0.8834408521652222,
    0.8918967843055725,
    0.14638841152191162,
    0.6633169054985046,
    0.8580631017684937,
    0.1994520127773285,
    0.37046507000923157,
    0.7844907641410828,
    0.38040539622306824,
    0.1402633786201477,
    0.6624323725700378,
    0.5144019722938538,
    0.14582161605358124,
    0.5184428095817566,
    0.5543993711471558,
    0.2070319652557373,
    0.37113502621650696,
    0.5529816746711731,
    0.26293525099754333,
    0.22624872624874115,
    0.5072483420372009,
    0.27785611152648926,
    0.09940323978662491,
    0.41842055320739746,
    0.2687886953353882,
    0.020419828593730927,
    0.34405243396759033,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.27267220616340637,
    0.05424775928258896,
    0.3759036660194397,
    0.2777925431728363,
    0.16186018288135529,
    0.46971872448921204,
    0.23791129887104034,
    0.30142661929130554,
    0.5378401279449463,
  ],
  "count": 60,
  "pos": [
    40,
    0,
    39.290016174316406,
    7.49497127532959,
    37.188270568847656,
    14.723876953125,
    33.769317626953125,
    21.430662155151367,
    29.15437126159668,
    27.377777099609375,
    23.506999969482422,
    32.3546142578125,
    17.0273380279541,
    36.184940338134766,
    9.944985389709473,
    38.733154296875,
    2.510868549346924,
    39.90909194946289,
    -5.0116400718688965,
    39.67119598388672,
    -12.356047630310059,
    38.027992248535156,
    -19.2622013092041,
    35.03780746459961,
    -25.485488891601562,
    30.806657791137695,
    -30.80550193786621,
    25.484533309936523,
    -35.03386306762695,
    19.260032653808594,
    -38.0208625793457,
    12.353730201721191,
    -39.6607780456543,
    5.010324001312256,
    -39.8956184387207,
    -2.510017156600952,
    -38.7171745300293,
    -9.940886497497559,
    -36.167293548583984,
    -17.01903533935547,
    -32.33640670776367,
    -23.49378204345703,
    -27.360321044921875,
    -29.13578224182129,
    -21.41538429260254,
    -33.74525833129883,
    -14.712282180786133,
    -37.15898132324219,
    -7.488499641418457,
    -39.25613021850586,
    -7.340992302430106e-15,
    -39.962501525878906,
    7.4879374504089355,
    -39.25318145751953,
    14.710073471069336,
    -37.153404235839844,
    21.410560607910156,
    -33.7376594543457,
    27.352108001708984,
    -29.127033233642578,
    32.32427215576172,
    -23.48496437072754,
    36.15100860595703,
    -17.011371612548828,
    38.696834564208984,
    -9.935663223266602,
    39.871665954589844,
    -2.5085103511810303,
    39.63399124145508,
    5.006932735443115,
    37.992332458496094,
    12.34444522857666,
    35.004940032958984,
    19.244142532348633,
    30.77776336669922,
    25.461585998535156,
    25.460628509521484,
    30.776607513427734,
    19.241973876953125,
    35.000999450683594,
    12.342127799987793,
    37.98520278930664,
    5.005616664886475,
    39.623573303222656,
    -2.507662534713745,
    39.858192443847656,
    -9.93154525756836,
    38.68085479736328,
    -17.003082275390625,
    36.133358001708984,
    -23.471738815307617,
    32.306068420410156,
    -29.10844612121582,
    27.334651947021484,
    -33.71358871459961,
    21.39530372619629,
    -37.124122619628906,
    14.698463439941406,
    -39.21929168701172,
    7.481472969055176,
    -39.92499923706055,
    1.4668206766940174e-14,
    -39.216346740722656,
    -7.480910778045654,
    -37.1185417175293,
    -14.69625473022461,
    -33.705989837646484,
    -21.390480041503906,
    -29.09969711303711,
    -27.32643699645996,
    -23.462923049926758,
    -32.2939338684082,
    -16.995418548583984,
    -36.117069244384766,
    -9.926322937011719,
    -38.66051483154297,
    -2.5061557292938232,
    -39.8342399597168,
    5.002232551574707,
    -39.59678649902344,
  ],
  "zv": null,
}
`;

exports[`buildCloud golden values (pre-refactor characterisation) > matches the frozen snapshot: rpm-model 1`] = `
{
  "bounds": [
    -39.924999998882015,
    40,
    -39.96249999944111,
    39.887499995523356,
  ],
  "climits": [
    -39.83509063720703,
    59.72993850708008,
  ],
  "col": [
    0.1276056170463562,
    0.5674331784248352,
    0.5503822565078735,
    0.20574109256267548,
    0.7070491313934326,
    0.4762409031391144,
    0.4613218605518341,
    0.8158574104309082,
    0.32759997248649597,
    0.7491680979728699,
    0.8744593858718872,
    0.14938724040985107,
    0.9315069913864136,
    0.8981389403343201,
    0.14531491696834564,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9475539326667786,
    0.900222897529602,
    0.1449565291404724,
    0.7797320485115051,
    0.87842857837677,
    0.1487046331167221,
    0.5014044642448425,
    0.8261541724205017,
    0.30292150378227234,
    0.23186469078063965,
    0.7248498797416687,
    0.46101582050323486,
    0.12909318506717682,
    0.5865784883499146,
    0.5435108542442322,
    0.17770697176456451,
    0.4386877715587616,
    0.5565054416656494,
    0.24167394638061523,
    0.2929326593875885,
    0.5359951257705688,
    0.2795250713825226,
    0.15435177087783813,
    0.46534237265586853,
    0.27212125062942505,
    0.04944873973727226,
    0.3713850677013397,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26913756132125854,
    0.02345864474773407,
    0.3469136655330658,
    0.2786266803741455,
    0.10611540824174881,
    0.4247405230998993,
    0.2608802914619446,
    0.23515444993972778,
    0.5124391317367554,
    0.2032516747713089,
    0.37983208894729614,
    0.5535257458686829,
    0.14242281019687653,
    0.527474582195282,
    0.5536837577819824,
    0.15248841047286987,
    0.6707625389099121,
    0.5072770714759827,
    0.387690007686615,
    0.7904374003410339,
    0.37039437890052795,
    0.6800394654273987,
    0.8613587021827698,
    0.1887655407190323,
    0.8932371735572815,
    0.8931689858436584,
    0.14616963267326355,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.973332941532135,
    0.9035707116127014,
    0.14438077807426453,
    0.835390567779541,
    0.8856567144393921,
    0.14746156334877014,
    0.5854666829109192,
    0.8427207469940186,
    0.24920187890529633,
    0.2923194169998169,
    0.7575124502182007,
    0.4258232116699219,
    0.1320580542087555,
    0.6247366666793823,
    0.529815673828125,
    0.16072478890419006,
    0.47883984446525574,
    0.557537317276001,
    0.22474229335784912,
    0.3311549127101898,
    0.5442975163459778,
    0.27158933877944946,
    0.18874366581439972,
    0.4853880703449249,
    0.2747451364994049,
    0.07230441272258759,
    0.39290520548820496,
    0.2675749361515045,
    0.009847280569374561,
    0.334097683429718,
    0.26780322194099426,
    0.011835644021630287,
    0.33596986532211304,
    0.27540817856788635,
    0.07807997614145279,
    0.3983432948589325,
    0.26968902349472046,
    0.19697920978069305,
    0.49018827080726624,
    0.2207927107810974,
    0.3400708734989166,
    0.5462341904640198,
    0.15736398100852966,
    0.4877707064151764,
    0.5568296909332275,
    0.13272640109062195,
    0.6333383917808533,
    0.5267284512519836,
    0.3103184103965759,
    0.7637262344360352,
    0.41536229848861694,
    0.6036733984947205,
    0.8463088870048523,
    0.23756694793701172,
    0.8469591736793518,
    0.8871591091156006,
    0.14720319211483002,
    0.9779901504516602,
    0.9041755199432373,
    0.14427676796913147,
    0.9905498623847961,
    0.9058066010475159,
    0.1439962536096573,
    0.8834408521652222,
    0.8918967843055725,
    0.14638841152191162,
    0.6633169054985046,
    0.8580631017684937,
    0.1994520127773285,
    0.37046507000923157,
    0.7844907641410828,
    0.38040539622306824,
    0.1402633786201477,
    0.6624323725700378,
    0.5144019722938538,
    0.14582161605358124,
    0.5184428095817566,
    0.5543993711471558,
    0.2070319652557373,
    0.37113502621650696,
    0.5529816746711731,
    0.26293525099754333,
    0.22624872624874115,
    0.5072483420372009,
    0.27785611152648926,
    0.09940323978662491,
    0.41842055320739746,
    0.2687886953353882,
    0.020419828593730927,
    0.34405243396759033,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.27267220616340637,
    0.05424775928258896,
    0.3759036660194397,
    0.2777925431728363,
    0.16186018288135529,
    0.46971872448921204,
    0.23791129887104034,
    0.30142661929130554,
    0.5378401279449463,
  ],
  "count": 60,
  "pos": [
    40,
    0,
    23.507001876831055,
    32.354610443115234,
    -12.356042861938477,
    38.02799606323242,
    -38.0208625793457,
    12.353729248046875,
    -32.33641052246094,
    -23.4937744140625,
    0.000002806169504765421,
    -39.962501525878906,
    32.32427215576172,
    -23.48496437072754,
    37.99232864379883,
    12.344457626342773,
    12.342144966125488,
    37.98519515991211,
    -23.471744537353516,
    32.30606460571289,
    -39.92499923706055,
    -0.000005607072580460226,
    -23.462919235229492,
    -32.2939338684082,
    12.33285903930664,
    -37.956668853759766,
    37.949527740478516,
    -12.330567359924316,
    32.27573013305664,
    23.44969367980957,
    -0.000022407222786569037,
    39.88750076293945,
    -32.263587951660156,
    23.440887451171875,
    -37.920997619628906,
    -12.32128620147705,
    -12.318937301635742,
    -37.913875579833984,
    23.427642822265625,
    -32.245399475097656,
    39.849998474121094,
    0.000011193078535143286,
    23.418853759765625,
    32.233245849609375,
    -12.309687614440918,
    37.885337829589844,
    -37.87820816040039,
    12.30735969543457,
    -32.21506881713867,
    -23.40559196472168,
    -1.0728839149563851e-13,
    -39.8125,
    32.20289993286133,
    -23.396820068359375,
    37.84965896606445,
    12.298142433166504,
    12.295782089233398,
    37.8425407409668,
    -23.383541107177734,
    32.18473815917969,
    -39.775001525878906,
    -0.000044688051275443286,
    -23.37474250793457,
    -32.17258834838867,
    12.286490440368652,
    -37.81401443481445,
    37.806888580322266,
    -12.284151077270508,
    32.15437316894531,
    23.361536026000977,
    0.000022322959921439178,
    39.73749923706055,
    -32.142276763916016,
    23.352664947509766,
    -37.77833557128906,
    -12.274944305419922,
    -12.272626876831055,
    -37.77120590209961,
    23.339439392089844,
    -32.12407302856445,
    39.70000076293945,
    0.000022301894205156714,
    23.330677032470703,
    32.111900329589844,
    -12.26329231262207,
    37.74269485473633,
    -37.73555374145508,
    12.26099681854248,
    -32.09370803833008,
    -23.317434310913086,
    -0.00004456165333976969,
    -39.662498474121094,
    32.08158874511719,
    -23.3085994720459,
    37.70701599121094,
    12.251747131347656,
    12.249471664428711,
    37.699867248535156,
    -23.295427322387695,
    32.06334686279297,
    -39.625,
    2.135662252513576e-13,
    -23.286611557006836,
    -32.05120849609375,
    12.240095138549805,
    -37.67137145996094,
    37.6641845703125,
    -12.237947463989258,
    32.032981872558594,
    23.273422241210938,
    -0.00004447739047463983,
    39.587501525878906,
    -32.020896911621094,
    23.26453399658203,
    -37.63569259643555,
    -12.22854995727539,
    -12.226316452026367,
    -37.62853240966797,
    23.251235961914062,
    -32.00274658203125,
  ],
  "zv": null,
}
`;

exports[`buildCloud golden values (pre-refactor characterisation) > matches the frozen snapshot: stride-5 1`] = `
{
  "bounds": [
    -39.925,
    40,
    -39.9625,
    38.02799387800963,
  ],
  "climits": [
    -39.9027214050293,
    59.98918914794922,
  ],
  "col": [
    0.1277240514755249,
    0.5665342807769775,
    0.550588846206665,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.1290198713541031,
    0.5856348276138306,
    0.543849527835846,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.1427200436592102,
    0.5266847610473633,
    0.5537463426589966,
    0.9867114424705505,
    0.9053081274032593,
    0.1440819799900055,
    0.13197502493858337,
    0.6236681938171387,
    0.5301991701126099,
    0.267678827047348,
    0.010752132162451744,
    0.33494964241981506,
    0.15761230885982513,
    0.48711079359054565,
    0.5568820238113403,
    0.971503496170044,
    0.9033331274986267,
    0.14442163705825806,
    0.13854393362998962,
    0.661260724067688,
    0.5154040455818176,
    0.26888859272003174,
    0.02129008248448372,
    0.3448718190193176,
  ],
  "count": 12,
  "pos": [
    40,
    0,
    23.506999969482422,
    32.3546142578125,
    -12.356047630310059,
    38.027992248535156,
    -38.0208625793457,
    12.353730201721191,
    -32.33640670776367,
    -23.49378204345703,
    -7.340992302430106e-15,
    -39.962501525878906,
    32.32427215576172,
    -23.48496437072754,
    37.992332458496094,
    12.34444522857666,
    12.342127799987793,
    37.98520278930664,
    -23.471738815307617,
    32.306068420410156,
    -39.92499923706055,
    1.4668206766940174e-14,
    -23.462923049926758,
    -32.2939338684082,
  ],
  "zv": null,
}
`;

exports[`buildCloud golden values (pre-refactor characterisation) > matches the frozen snapshot: truncating-crop 1`] = `
{
  "bounds": [
    -39.89561960643496,
    40,
    -17.019035327556836,
    39.909092966367744,
  ],
  "climits": [
    -39.9027214050293,
    59.72993850708008,
  ],
  "col": [
    0.12911634147167206,
    0.5868763327598572,
    0.5434039831161499,
    0.177521750330925,
    0.439114511013031,
    0.5565270185470581,
    0.24142606556415558,
    0.29349222779273987,
    0.5361167192459106,
    0.2793519198894501,
    0.1551022082567215,
    0.46577978134155273,
    0.2722238004207611,
    0.050342004746198654,
    0.37222614884376526,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.2692421078681946,
    0.024369552731513977,
    0.3477713465690613,
    0.2787248194217682,
    0.10697020590305328,
    0.4255453646183014,
    0.26071980595588684,
    0.2358500361442566,
    0.5128445625305176,
    0.20304910838603973,
    0.38029879331588745,
    0.5535494089126587,
    0.14229035377502441,
    0.5278266072273254,
    0.5536558628082275,
    0.152835413813591,
    0.6709989905357361,
    0.5070748329162598,
    0.388036847114563,
    0.7905570864677429,
    0.3701927959918976,
    0.680260181427002,
    0.8614022135734558,
    0.18862447142601013,
    0.8933050632476807,
    0.8931778073310852,
    0.14616811275482178,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9733464121818542,
    0.9035724401473999,
    0.14438048005104065,
    0.8354977369308472,
    0.8856706619262695,
    0.14745916426181793,
    0.5857516527175903,
    0.8427769541740417,
    0.2490197718143463,
    0.2927309572696686,
    0.7576544880867004,
    0.42558401823043823,
  ],
  "count": 20,
  "pos": [
    40,
    0,
    39.290016174316406,
    7.494971752166748,
    37.188270568847656,
    14.723877906799316,
    33.76932144165039,
    21.430654525756836,
    29.154375076293945,
    27.37777328491211,
    23.50700569152832,
    32.354610443115234,
    17.027345657348633,
    36.1849365234375,
    9.944989204406738,
    38.733154296875,
    2.5108649730682373,
    39.90909194946289,
    -5.011632442474365,
    39.67119598388672,
    -12.356047630310059,
    38.027992248535156,
    -19.26219367980957,
    35.037811279296875,
    -25.485488891601562,
    30.806657791137695,
    -30.80550193786621,
    25.484533309936523,
    -35.03386688232422,
    19.260026931762695,
    -38.0208625793457,
    12.353730201721191,
    -39.66077423095703,
    5.010331630706787,
    -39.8956184387207,
    -2.510017156600952,
    -38.71717834472656,
    -9.940871238708496,
    -36.167293548583984,
    -17.01903533935547,
  ],
  "zv": null,
}
`;

exports[`buildCloud golden values (pre-refactor characterisation) > matches the frozen snapshot: vc-model 1`] = `
{
  "bounds": [
    -39.782834256942834,
    40,
    -39.90694363951632,
    39.88852314613845,
  ],
  "climits": [
    -39.83509063720703,
    59.72993850708008,
  ],
  "col": [
    0.1276056170463562,
    0.5674331784248352,
    0.5503822565078735,
    0.20574109256267548,
    0.7070491313934326,
    0.4762409031391144,
    0.4613218605518341,
    0.8158574104309082,
    0.32759997248649597,
    0.7491680979728699,
    0.8744593858718872,
    0.14938724040985107,
    0.9315069913864136,
    0.8981389403343201,
    0.14531491696834564,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9475539326667786,
    0.900222897529602,
    0.1449565291404724,
    0.7797320485115051,
    0.87842857837677,
    0.1487046331167221,
    0.5014044642448425,
    0.8261541724205017,
    0.30292150378227234,
    0.23186469078063965,
    0.7248498797416687,
    0.46101582050323486,
    0.12909318506717682,
    0.5865784883499146,
    0.5435108542442322,
    0.17770697176456451,
    0.4386877715587616,
    0.5565054416656494,
    0.24167394638061523,
    0.2929326593875885,
    0.5359951257705688,
    0.2795250713825226,
    0.15435177087783813,
    0.46534237265586853,
    0.27212125062942505,
    0.04944873973727226,
    0.3713850677013397,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26913756132125854,
    0.02345864474773407,
    0.3469136655330658,
    0.2786266803741455,
    0.10611540824174881,
    0.4247405230998993,
    0.2608802914619446,
    0.23515444993972778,
    0.5124391317367554,
    0.2032516747713089,
    0.37983208894729614,
    0.5535257458686829,
    0.14242281019687653,
    0.527474582195282,
    0.5536837577819824,
    0.15248841047286987,
    0.6707625389099121,
    0.5072770714759827,
    0.387690007686615,
    0.7904374003410339,
    0.37039437890052795,
    0.6800394654273987,
    0.8613587021827698,
    0.1887655407190323,
    0.8932371735572815,
    0.8931689858436584,
    0.14616963267326355,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.973332941532135,
    0.9035707116127014,
    0.14438077807426453,
    0.835390567779541,
    0.8856567144393921,
    0.14746156334877014,
    0.5854666829109192,
    0.8427207469940186,
    0.24920187890529633,
    0.2923194169998169,
    0.7575124502182007,
    0.4258232116699219,
    0.1320580542087555,
    0.6247366666793823,
    0.529815673828125,
    0.16072478890419006,
    0.47883984446525574,
    0.557537317276001,
    0.22474229335784912,
    0.3311549127101898,
    0.5442975163459778,
    0.27158933877944946,
    0.18874366581439972,
    0.4853880703449249,
    0.2747451364994049,
    0.07230441272258759,
    0.39290520548820496,
    0.2675749361515045,
    0.009847280569374561,
    0.334097683429718,
    0.26780322194099426,
    0.011835644021630287,
    0.33596986532211304,
    0.27540817856788635,
    0.07807997614145279,
    0.3983432948589325,
    0.26968902349472046,
    0.19697920978069305,
    0.49018827080726624,
    0.2207927107810974,
    0.3400708734989166,
    0.5462341904640198,
    0.15736398100852966,
    0.4877707064151764,
    0.5568296909332275,
    0.13272640109062195,
    0.6333383917808533,
    0.5267284512519836,
    0.3103184103965759,
    0.7637262344360352,
    0.41536229848861694,
    0.6036733984947205,
    0.8463088870048523,
    0.23756694793701172,
    0.8469591736793518,
    0.8871591091156006,
    0.14720319211483002,
    0.9779901504516602,
    0.9041755199432373,
    0.14427676796913147,
    0.9905498623847961,
    0.9058066010475159,
    0.1439962536096573,
    0.8834408521652222,
    0.8918967843055725,
    0.14638841152191162,
    0.6633169054985046,
    0.8580631017684937,
    0.1994520127773285,
    0.37046507000923157,
    0.7844907641410828,
    0.38040539622306824,
    0.1402633786201477,
    0.6624323725700378,
    0.5144019722938538,
    0.14582161605358124,
    0.5184428095817566,
    0.5543993711471558,
    0.2070319652557373,
    0.37113502621650696,
    0.5529816746711731,
    0.26293525099754333,
    0.22624872624874115,
    0.5072483420372009,
    0.27785611152648926,
    0.09940323978662491,
    0.41842055320739746,
    0.2687886953353882,
    0.020419828593730927,
    0.34405243396759033,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.27267220616340637,
    0.05424775928258896,
    0.3759036660194397,
    0.2777925431728363,
    0.16186018288135529,
    0.46971872448921204,
    0.23791129887104034,
    0.30142661929130554,
    0.5378401279449463,
  ],
  "count": 60,
  "pos": [
    40,
    0,
    35.099334716796875,
    19.175987243652344,
    21.60444450378418,
    33.654293060302734,
    2.8197147846221924,
    39.88852310180664,
    -16.653717041015625,
    36.35079574584961,
    -32.044681549072266,
    23.907047271728516,
    -39.58109664916992,
    5.6059794425964355,
    -37.4150505065918,
    -14.067190170288086,
    -26.07672119140625,
    -30.28957176208496,
    -8.345494270324707,
    -39.083091735839844,
    11.430548667907715,
    -38.290462493896484,
    28.40054702758789,
    -28.10529327392578,
    38.40071487426758,
    -11.025670051574707,
    38.9764518737793,
    8.757750511169434,
    29.98561668395996,
    26.38951301574707,
    13.634546279907227,
    37.54096984863281,
    -6.062541961669922,
    39.47344207763672,
    -24.26864242553711,
    31.711538314819336,
    -36.51153564453125,
    16.1610050201416,
    -39.782833099365234,
    -3.358304738998413,
    -33.27790069580078,
    -22.05028533935547,
    -18.59467887878418,
    -35.32072067260742,
    0.658051609992981,
    -39.906944274902344,
    19.74689483642578,
    -34.68052673339844,
    33.97742462158203,
    -20.92594337463379,
    39.84895324707031,
    -2.0256452560424805,
    35.916221618652344,
    17.37092399597168,
    23.146059036254883,
    32.49100875854492,
    4.680705547332764,
    39.61285400390625,
    -14.934864044189453,
    36.98268508911133,
    -30.871198654174805,
    25.247173309326172,
    -39.20340347290039,
    7.295587062835693,
    -37.87857437133789,
    -12.451013565063477,
    -27.222206115722656,
    -29.12811851501465,
    -9.859326362609863,
    -38.626041412353516,
    9.931528091430664,
    -38.603416442871094,
    27.272136688232422,
    -29.064950942993164,
    37.88685989379883,
    -12.361573219299316,
    39.157588958740234,
    7.388331890106201,
    30.770090103149414,
    25.313779830932617,
    14.792616844177246,
    36.992515563964844,
    -4.833062171936035,
    39.542266845703125,
    -23.263843536376953,
    32.33302688598633,
    -35.95018768310547,
    17.143417358398438,
    -39.759395599365234,
    -2.277022123336792,
    -33.75010681152344,
    -21.13306427001953,
    -19.405616760253906,
    -34.76750946044922,
    -0.2688642740249634,
    -39.8116455078125,
    18.932233810424805,
    -35.01844787597656,
    33.4525146484375,
    -21.57155418395996,
    39.702362060546875,
    -2.7940945625305176,
    36.135955810546875,
    16.67209815979004,
    23.63433074951172,
    32.01353454589844,
    5.2886810302734375,
    39.435508728027344,
    -14.363364219665527,
    37.101280212402344,
    -30.45931053161621,
    25.587560653686523,
    -39.01566696166992,
    7.7428879737854,
    -37.91389465332031,
    -12.016363143920898,
    -27.4259090423584,
    -28.798568725585938,
    -10.147907257080078,
    -38.44788360595703,
  ],
  "zv": null,
}
`;

exports[`buildCloud golden values (pre-refactor characterisation) > matches the frozen snapshot: z-series-fx 1`] = `
{
  "bounds": [
    -39.925,
    40,
    -39.9625,
    39.90909273202703,
  ],
  "climits": [
    -39.83509063720703,
    59.72993850708008,
  ],
  "col": [
    0.1276056170463562,
    0.5674331784248352,
    0.5503822565078735,
    0.20574109256267548,
    0.7070491313934326,
    0.4762409031391144,
    0.4613218605518341,
    0.8158574104309082,
    0.32759997248649597,
    0.7491680979728699,
    0.8744593858718872,
    0.14938724040985107,
    0.9315069913864136,
    0.8981389403343201,
    0.14531491696834564,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.9475539326667786,
    0.900222897529602,
    0.1449565291404724,
    0.7797320485115051,
    0.87842857837677,
    0.1487046331167221,
    0.5014044642448425,
    0.8261541724205017,
    0.30292150378227234,
    0.23186469078063965,
    0.7248498797416687,
    0.46101582050323486,
    0.12909318506717682,
    0.5865784883499146,
    0.5435108542442322,
    0.17770697176456451,
    0.4386877715587616,
    0.5565054416656494,
    0.24167394638061523,
    0.2929326593875885,
    0.5359951257705688,
    0.2795250713825226,
    0.15435177087783813,
    0.46534237265586853,
    0.27212125062942505,
    0.04944873973727226,
    0.3713850677013397,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.26913756132125854,
    0.02345864474773407,
    0.3469136655330658,
    0.2786266803741455,
    0.10611540824174881,
    0.4247405230998993,
    0.2608802914619446,
    0.23515444993972778,
    0.5124391317367554,
    0.2032516747713089,
    0.37983208894729614,
    0.5535257458686829,
    0.14242281019687653,
    0.527474582195282,
    0.5536837577819824,
    0.15248841047286987,
    0.6707625389099121,
    0.5072770714759827,
    0.387690007686615,
    0.7904374003410339,
    0.37039437890052795,
    0.6800394654273987,
    0.8613587021827698,
    0.1887655407190323,
    0.8932371735572815,
    0.8931689858436584,
    0.14616963267326355,
    0.9932479858398438,
    0.9061570167541504,
    0.14393599331378937,
    0.973332941532135,
    0.9035707116127014,
    0.14438077807426453,
    0.835390567779541,
    0.8856567144393921,
    0.14746156334877014,
    0.5854666829109192,
    0.8427207469940186,
    0.24920187890529633,
    0.2923194169998169,
    0.7575124502182007,
    0.4258232116699219,
    0.1320580542087555,
    0.6247366666793823,
    0.529815673828125,
    0.16072478890419006,
    0.47883984446525574,
    0.557537317276001,
    0.22474229335784912,
    0.3311549127101898,
    0.5442975163459778,
    0.27158933877944946,
    0.18874366581439972,
    0.4853880703449249,
    0.2747451364994049,
    0.07230441272258759,
    0.39290520548820496,
    0.2675749361515045,
    0.009847280569374561,
    0.334097683429718,
    0.26780322194099426,
    0.011835644021630287,
    0.33596986532211304,
    0.27540817856788635,
    0.07807997614145279,
    0.3983432948589325,
    0.26968902349472046,
    0.19697920978069305,
    0.49018827080726624,
    0.2207927107810974,
    0.3400708734989166,
    0.5462341904640198,
    0.15736398100852966,
    0.4877707064151764,
    0.5568296909332275,
    0.13272640109062195,
    0.6333383917808533,
    0.5267284512519836,
    0.3103184103965759,
    0.7637262344360352,
    0.41536229848861694,
    0.6036733984947205,
    0.8463088870048523,
    0.23756694793701172,
    0.8469591736793518,
    0.8871591091156006,
    0.14720319211483002,
    0.9779901504516602,
    0.9041755199432373,
    0.14427676796913147,
    0.9905498623847961,
    0.9058066010475159,
    0.1439962536096573,
    0.8834408521652222,
    0.8918967843055725,
    0.14638841152191162,
    0.6633169054985046,
    0.8580631017684937,
    0.1994520127773285,
    0.37046507000923157,
    0.7844907641410828,
    0.38040539622306824,
    0.1402633786201477,
    0.6624323725700378,
    0.5144019722938538,
    0.14582161605358124,
    0.5184428095817566,
    0.5543993711471558,
    0.2070319652557373,
    0.37113502621650696,
    0.5529816746711731,
    0.26293525099754333,
    0.22624872624874115,
    0.5072483420372009,
    0.27785611152648926,
    0.09940323978662491,
    0.41842055320739746,
    0.2687886953353882,
    0.020419828593730927,
    0.34405243396759033,
    0.26700401306152344,
    0.004873999860137701,
    0.3294149935245514,
    0.27267220616340637,
    0.05424775928258896,
    0.3759036660194397,
    0.2777925431728363,
    0.16186018288135529,
    0.46971872448921204,
    0.23791129887104034,
    0.30142661929130554,
    0.5378401279449463,
  ],
  "count": 60,
  "pos": [
    40,
    0,
    39.290016174316406,
    7.49497127532959,
    37.188270568847656,
    14.723876953125,
    33.769317626953125,
    21.430662155151367,
    29.15437126159668,
    27.377777099609375,
    23.506999969482422,
    32.3546142578125,
    17.0273380279541,
    36.184940338134766,
    9.944985389709473,
    38.733154296875,
    2.510868549346924,
    39.90909194946289,
    -5.0116400718688965,
    39.67119598388672,
    -12.356047630310059,
    38.027992248535156,
    -19.2622013092041,
    35.03780746459961,
    -25.485488891601562,
    30.806657791137695,
    -30.80550193786621,
    25.484533309936523,
    -35.03386306762695,
    19.260032653808594,
    -38.0208625793457,
    12.353730201721191,
    -39.6607780456543,
    5.010324001312256,
    -39.8956184387207,
    -2.510017156600952,
    -38.7171745300293,
    -9.940886497497559,
    -36.167293548583984,
    -17.01903533935547,
    -32.33640670776367,
    -23.49378204345703,
    -27.360321044921875,
    -29.13578224182129,
    -21.41538429260254,
    -33.74525833129883,
    -14.712282180786133,
    -37.15898132324219,
    -7.488499641418457,
    -39.25613021850586,
    -7.340992302430106e-15,
    -39.962501525878906,
    7.4879374504089355,
    -39.25318145751953,
    14.710073471069336,
    -37.153404235839844,
    21.410560607910156,
    -33.7376594543457,
    27.352108001708984,
    -29.127033233642578,
    32.32427215576172,
    -23.48496437072754,
    36.15100860595703,
    -17.011371612548828,
    38.696834564208984,
    -9.935663223266602,
    39.871665954589844,
    -2.5085103511810303,
    39.63399124145508,
    5.006932735443115,
    37.992332458496094,
    12.34444522857666,
    35.004940032958984,
    19.244142532348633,
    30.77776336669922,
    25.461585998535156,
    25.460628509521484,
    30.776607513427734,
    19.241973876953125,
    35.000999450683594,
    12.342127799987793,
    37.98520278930664,
    5.005616664886475,
    39.623573303222656,
    -2.507662534713745,
    39.858192443847656,
    -9.93154525756836,
    38.68085479736328,
    -17.003082275390625,
    36.133358001708984,
    -23.471738815307617,
    32.306068420410156,
    -29.10844612121582,
    27.334651947021484,
    -33.71358871459961,
    21.39530372619629,
    -37.124122619628906,
    14.698463439941406,
    -39.21929168701172,
    7.481472969055176,
    -39.92499923706055,
    1.4668206766940174e-14,
    -39.216346740722656,
    -7.480910778045654,
    -37.1185417175293,
    -14.69625473022461,
    -33.705989837646484,
    -21.390480041503906,
    -29.09969711303711,
    -27.32643699645996,
    -23.462923049926758,
    -32.2939338684082,
    -16.995418548583984,
    -36.117069244384766,
    -9.926322937011719,
    -38.66051483154297,
    -2.5061557292938232,
    -39.8342399597168,
    5.002232551574707,
    -39.59678649902344,
  ],
  "zv": [
    0.00010417985322419554,
    0.09946051985025406,
    0.19485582411289215,
    0.28248700499534607,
    0.35886049270629883,
    0.42093145847320557,
    0.46622538566589355,
    0.49293652176856995,
    0.5,
    0.4871342182159424,
    0.45485207438468933,
    0.40444058179855347,
    0.33790943026542664,
    0.2579110860824585,
    0.16763480007648468,
    0.07067957520484924,
    -0.02908925898373127,
    -0.1276942491531372,
    -0.22120429575443268,
    -0.3058914840221405,
    -0.37837961316108704,
    -0.43577879667282104,
    -0.47580063343048096,
    -0.4968497157096863,
    -0.4980868101119995,
    -0.47946256399154663,
    -0.44171950221061707,
    -0.38636234402656555,
    -0.3155980110168457,
    -0.23224759101867676,
    -0.13963405787944794,
    -0.04144958406686783,
    0.058391496539115906,
    0.15590883791446686,
    0.24721474945545197,
    0.32866916060447693,
    0.3970246911048889,
    0.44955626130104065,
    0.484169602394104,
    0.4994847774505615,
    0.4948912262916565,
    0.4705720543861389,
    0.42749685049057007,
    0.36738285422325134,
    0.29262658953666687,
    0.20620837807655334,
    0.11157345026731491,
    0.012494594790041447,
    -0.08707822859287262,
    -0.18317537009716034,
    -0.27196571230888367,
    -0.3499095141887665,
    -0.41389936208724976,
    -0.4613841772079468,
    -0.4904709458351135,
    -0.5,
    -0.48959147930145264,
    -0.4596603512763977,
    -0.41139987111091614,
    -0.3467339873313904,
  ],
}
`;
